# recorder

./: CMakeLists.txt  README.md  package.xml
config/: frames.yaml
launch/: extract.launch  extract_rosbag.launch  record.launch  record_kinect.launch  record_rosbag.launch  record_tf.launch  record_video.launch  start_kinect.launch
notebooks/: dump_kinect_images.ipynb
scripts/: plot.py  record  recorder.py  tf_recorder.py  video_recorder.py
srv/: RecordingCommand.srv
